add formatting functionality for float, double and BigDecimal types use jdk 17 and fix deprecation warnings